# Dark_Arcane

./: Model_training.py  README.md  historical_data.csv  market_trend.csv
TradePredictorAI/: ai_strategy_advisor.py  analysis_utils.py  chat_processor.py  main.py  market_data.py  news_analyzer.py  portfolio_optimizer.py  pyproject.toml  replit.nix  risk_calculator.py  voice_processor.py
TradePredictorAI/attached_assets/: Pasted--AI-Powered-Trade-Recommendations-Feature-Use-machine-learning-algorithms-to-analyze-market-data--1738445999708.txt  Pasted-1-Voice-Query-Functionality-Voice-queries-allow-users-to-interact-with-the-chatbot-using-spoken-la-1738445479305.txt  Pasted-Merged-Feature-Smart-Trading-Insights-Dashboard-This-feature-combines-interactive-charts-news-sum-1738446542964.txt
